# workflow-orchestration-queue-kilo57

./: .ai-repository-summary.md  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: validate.yml
debrief-and-document/: debrief-report.md  report.md  trace.md
docs/: implementation-plan.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
docs/adr/: 007-shell-bridge-execution.md  README.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
src/: __init__.py
src/queue/: __init__.py
src/workflow_orchestration_queue/: __init__.py
src/workflow_orchestration_queue/models/: __init__.py  work_item.py
src/workflow_orchestration_queue/queue/: __init__.py  github_queue.py
test/: test-opencode-run.sh
tests/: test_github_queue.py  test_models.py  test_placeholder.py  test_work_item.py
