[project]
name = "workflow-orchestration-queue"
version = "0.1.0"
description = "GitHub Actions-based AI orchestration system for workflow management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
exclude = [
    "plan_docs",
    ".venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "PT",     # flake8-pytest-style
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
